@@ -4956,11 +4956,9 @@ descriptor: value;</pre>
       <pre>
   attribute vec4 a_position;
 
-  uniform mat4 u_projectionMatrix;
-
   void main()
   {        
-      gl_Position = u_projectionMatrix * a_position;
+      gl_Position = a_position;
   }</pre>
 
       <p>simple.fs</p>
@@ -5043,15 +5041,7 @@ void main()
   <tbody>
     <tr>
       <th><code>attribute vec4 a_position</code>
-      <td>The vertex coordinates in the <a href="#FilterEffectsRegion">filter region</a> box. Coordinates are normalized to the [-0.5, 0.5] range along the x, y and z axis.
-    </tr>
-    <tr>
-      <th><code>attribute vec2 a_texCoord</code>
-      <td>The vertex's texture coordinate. Coordinates are in the [0, 1] range on both axis
-    </tr>
-    <tr>
-      <th><code>attribute vec2 a_meshCoord</code>
-      <td>The vertex's coordinate in the <a href="#gridltintegergt12-detached-attached-">mesh box</a>. Coordinates are in the [0, 1] range on both axis.
+      <td>The vertex coordinates in the <a href="#FilterPrimitiveSubRegion">Filter primitive subregion</a>. Coordinates are normalized to the [0, 1] range along the x, y and z axis.
     </tr>
     <tr>
       <th><code>attribute vec3 a_triangleCoord</code>
@@ -5088,16 +5078,8 @@ void main()
   </thead>
   <tbody>
     <tr>
-      <th><code>uniform mat4 u_projectionMatrix</code>
-      <td>The current projection matrix to the destination texture's coordinate space). <em>Note that the 'model matrix' which the 'transform' property sets, is not passed to the shaders. It is applied to the filtered element's rendering.</em>
-    </tr>
-    <tr>
       <th><code>uniform vec2 u_textureSize</code>
       <td>The input texture's size. Includes the filter margins. The texture size is given in the actual device pixels and incorporates the device pixel ratio.
-    </tr>
-    <tr>
-      <th><code>uniform vec2 u_tileSize</code>
-      <td>The size of the current mesh tile, in the same coordinate space as the vertices.
     </tr>
     <tr>
       <th><code>uniform vec2 u_meshSize</code>
