@@ -2,6 +2,11 @@ Changes for Filter Effects specification
 ----------------------------------------
 
 2013-04-10  Dirk Schulze  <dschulze@adobe.com>
+- Remove a_texCoord, a_mesCoord, u_tileSize, u_projectionMatrix variables and attributes.
+These turned out to be implementation specifics that can be abstracted more from the user.
+- The shader coordinate system changes to a range from [0,1] for better compatibility to WebGL.
+
+2013-04-10  Dirk Schulze  <dschulze@adobe.com>
 - Remove u_meshBox from spec. With the removal of <box> argument for
 shaders not necessary anymore.
 
